Funcion GET Movilidad, aun no trae las tablas Tipo Movilidad y Tipo Categoria
