# controllers/movilidad.go
@@ -5,6 +5,8 @@ import (
 
 	"github.com/astaxie/beego"
 	"github.com/astaxie/beego/logs"
+	"github.com/udistrital/movilidad_academica_mid/models"
+	"github.com/udistrital/utils_oas/request"
 )
 
 // MovilidadController for Movilidad
@@ -27,11 +29,17 @@ func (c *MovilidadController) URLMapping() {
 // @router /GetMovilidad [get]
 func (c *MovilidadController) GetMovilidad() {
 	logs.Info("entro")
-	//idStr := c.Ctx.Input.Param(":id")
-	// logs.Info("entra")
-	// logs.Info(beego.AppConfig.String("UrlLigaCrud") + "Movilidad")
+	logs.Info(beego.AppConfig.String("UrlMovilidadCrud") + "/movilidad")
+	var movilidad []models.Movilidad
 
-	// c.ServeJSON()
+	if err := request.GetJson(beego.AppConfig.String("UrlMovilidadCrud")+"/movilidad", &movilidad); err == nil {
+		logs.Info("tamaño", len(movilidad))
+		c.Data["json"] = movilidad
+	} else {
+		c.Data["system"] = err
+		c.Abort("404")
+	}
+	c.ServeJSON()
 }
 
 // GetNumeroRondasLiga ...
@@ -48,4 +56,14 @@ func (c *MovilidadController) GetRondasLiga() {
 		c.Data["json"] = equiposTotales * 2
 	}
 	c.ServeJSON()
+}
+func (c *MovilidadController) GetMovilidadId(idMovilidad string) (res []models.Movilidad) {
+	logs.Info("entro")
+	if err := request.GetJson(beego.AppConfig.String("UrlMovilidadCrud")+"movilidad/?query=Id"+idMovilidad, &res); err == nil {
+		logs.Info("Retorna movilidadId")
+	} else {
+		logs.Info("error")
+	}
+	logs.Info("res", res)
+	return
 }
