# models/movilidad.go
@@ -9,4 +9,7 @@ type Movilidad struct {
 	FechaFinal  time.Time
 	Persona     int
 	Convenio    int
+	IdMovilidad *TipoMovilidad
+	IdCategoria *TipoCategoria
+
 }
